OPSEXP-1835: support for java 17 (#500)